[FIX] overflow-x

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -143,6 +143,8 @@ body {
 }
 
 section {
+    overflow-x: hidden;
+
     min-height: 100vh;
 
     padding-block: var(--section-padding-block);
